--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
